# chatbot_skeleton

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ADR.md  AGENT.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  TESTING.md  TODO.md  alembic.ini  docker-compose.yml  justfile  main.py  profile_app.py  pyproject.toml  pytest.ini  seed_database.py  uow_implementation_adr.md
.claude/: settings.local.json
.github/workflows/: ci.yml  claude.yml  docker.yml  integration.yml
alembic/: env.py
alembic/versions/: 41598cbf6b2a_initial_migration.py  add_client_msg_id_for_deduplication.py  b6a81be961a6_update_metadata_columns.py
scripts/: setup_dev.sh  test_local.sh
src/: cli.py  main.py
src/application/dto/: chat_dto.py
src/application/interfaces/: bot_service.py
src/application/services/: chat_service.py  dspy_react_agent.py  echo_bot.py  echo_bot_service.py  file_processor.py  mock_dspy.py  thread_title_service.py  uow_chat_service.py
src/domain/entities/: chat_attachment.py  chat_message.py  chat_thread.py
src/domain/repositories/: chat_message_repository.py  chat_repository.py  chat_thread_repository.py
src/domain/value_objects/: message_role.py  thread_status.py
src/infrastructure/config/: database.py  ports.py
src/infrastructure/container/: container.py
src/infrastructure/database/: mappers.py  models.py  pg_chat_repository.py  repositories.py  repository_factory.py  sqlite_chat_repository.py
src/infrastructure/di/: __init__.py  container.py
src/infrastructure/middleware/: __init__.py  logging_middleware.py
src/infrastructure/profiling/: __init__.py  profiler.py
src/presentation/api/: chat_routes.py  dependencies.py  export_routes.py  visualization_routes.py  webhook_routes.py
src/presentation/schemas/: requests.py  responses.py
src/presentation/websocket/: chat_websocket.py
static/css/: base.css  chat.css  dashboard.css
static/js/: app.js  chat.js  dashboard.js
templates/: base.html
templates/chat/: interface.html
templates/dashboard/: index.html
tests/: conftest.py  test_basic_functionality.py  test_integration.py  test_performance.py  test_repository_container.py  test_sqlite_repository.py  test_uow_chat_service.py
