[project]
name = "sample-chat-app"
version = "0.1.0"
description = "Modern Python chat application with FastAPI and WebSocket support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "dependency-injector>=4.41.0",
    "python-multipart>=0.0.6",
    "dspy-ai>=2.4.0",
    "openai>=1.10.0",
    "anthropic>=0.8.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.5.0",
    "pygments>=2.17.0",
    "python-dateutil>=2.8.0",
    "wolframalpha>=5.0.0",
    "serpapi>=0.1.5",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.3.0",
    "nltk>=3.8.0",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "py-spy>=0.4.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
dev = "main:main"
chatapp = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "UP"]
ignore = ["E501", "B904", "B008", "E722", "F401", "W293", "W291", "W292", "UP035"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "psutil>=7.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
